--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e6e9c3">  <td>19/09/09 00:17:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GETapiTest.getApiMethodWithoutHeadersTest()[pri:1, instance:com.qa.testcases.GETapiTest@1e88b3c]">getApiMethodWithoutHeadersTest</td> 
-  <td>main@26552877</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>19/09/09 00:17:04</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GETapiTest.setUp()[pri:0, instance:com.qa.testcases.GETapiTest@1e88b3c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@26552877</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>23/03/30 18:34:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkContentType()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">checkContentType</td> 
+  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>23/03/30 18:34:13</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkCookies()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">checkCookies</td> 
+  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>23/03/30 18:34:13</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkResponseBody()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">checkResponseBody</td> 
+  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>23/03/30 18:34:13</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkStatusCode()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">checkStatusCode</td> 
+  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>23/03/30 18:34:08</td>   <td>-4923</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAllEmployeesTest.getAllEmployees()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">&gt;&gt;getAllEmployees</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>23/03/30 18:34:08</td>   <td>-4976</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>23/03/30 18:34:13</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GetAllEmployeesTest.teardown()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@1f7030a6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
 </table>
