--- a/test-output/old/employeeApiSuite/methods-alphabetical.html
+++ b/test-output/old/employeeApiSuite/methods-alphabetical.html
@@ -1,36 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>employeeApiSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6e1f4">  <td>19/07/01 09:49:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkContentType()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">checkContentType</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/07/01 09:49:48</td>   <td>937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkContentType()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">checkContentType</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>19/07/01 09:49:47</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkCookies()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">checkCookies</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/07/01 09:49:48</td>   <td>1027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkCookies()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">checkCookies</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>19/07/01 09:49:47</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkResponseBody()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">checkResponseBody</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/07/01 09:49:48</td>   <td>1032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkResponseBody()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">checkResponseBody</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>19/07/01 09:49:47</td>   <td>59</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkStatusCode()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">checkStatusCode</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/07/01 09:49:48</td>   <td>1036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkStatusCode()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">checkStatusCode</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/07/01 09:49:47</td>   <td>156</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PostEmployeeRecordTest.createEmployee()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">&gt;&gt;createEmployee</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>19/07/01 09:49:45</td>   <td>-2491</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAllEmployeesTest.getAllEmployees()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">&gt;&gt;getAllEmployees</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/07/01 09:49:48</td>   <td>1046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GETapiTestBDD.getMethodTest()[pri:0, instance:com.qa.testcases.GETapiTestBDD@1e88b3c]">getMethodTest</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/07/01 09:49:50</td>   <td>3102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSTapiTestBDD.postMethodTest()[pri:0, instance:com.qa.testcases.POSTapiTestBDD@d80b78]">postMethodTest</td> 
-  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/07/01 09:49:45</td>   <td>-2544</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/07/01 09:49:47</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>19/07/01 09:49:47</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GetAllEmployeesTest.teardown()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@a3ffec]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15762504</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/07/01 09:49:48</td>   <td>1045</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PostEmployeeRecordTest.teardown()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@1caeb3e]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15762504</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>23/03/30 18:36:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkContentType()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">checkContentType</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>23/03/30 18:36:03</td>   <td>928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkContentType()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">checkContentType</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>23/03/30 18:36:02</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkCookies()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">checkCookies</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>23/03/30 18:36:03</td>   <td>930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkCookies()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">checkCookies</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>23/03/30 18:36:02</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkResponseBody()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">checkResponseBody</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>23/03/30 18:36:03</td>   <td>933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkResponseBody()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">checkResponseBody</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>23/03/30 18:36:02</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllEmployeesTest.checkStatusCode()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">checkStatusCode</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>23/03/30 18:36:03</td>   <td>938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostEmployeeRecordTest.checkStatusCode()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">checkStatusCode</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>23/03/30 18:36:02</td>   <td>257</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PostEmployeeRecordTest.createEmployee()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">&gt;&gt;createEmployee</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>23/03/30 18:35:58</td>   <td>-3921</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAllEmployeesTest.getAllEmployees()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">&gt;&gt;getAllEmployees</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>23/03/30 18:36:03</td>   <td>952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GETapiTestBDD.getMethodTest()[pri:0, instance:com.qa.testcases.GETapiTestBDD@91161c7]">getMethodTest</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>23/03/30 18:36:07</td>   <td>5049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSTapiTestBDD.postMethodTest()[pri:0, instance:com.qa.testcases.POSTapiTestBDD@604ed9f0]">postMethodTest</td> 
+  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>23/03/30 18:35:58</td>   <td>-3953</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>23/03/30 18:36:02</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>23/03/30 18:36:02</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GetAllEmployeesTest.teardown()[pri:0, instance:com.employeeApi.testcases.GetAllEmployeesTest@5e3a8624]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843467284</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>23/03/30 18:36:03</td>   <td>951</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PostEmployeeRecordTest.teardown()[pri:0, instance:com.employeeApi.testcases.PostEmployeeRecordTest@5c3bd550]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843467284</td>   <td></td> </tr>
 </table>
